--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="postgresql://postgres:password@localhost:5432/portfolio"
+DATABASE_URL="postgresql://postgres:santialdu1@localhost:7777/TestACM"
